# andes

./: .dockerignore  .gitignore  .zenodo.json  BUG_REVIEW.md  CLI_MIGRATION.md  Cargo.toml  DOCS.md  Dockerfile  HERITAGE.md  LICENSE  NOTICE  README.md  TRAIN.md  pom.xml  rust-toolchain.toml
crates/andes/: Cargo.toml
crates/andes/tests/: cli_smoke.rs  precursor_cal_bit_identical.rs  store_selection_equivalence.rs  train_end_to_end.rs  train_from_msnet.rs
crates/input/: Cargo.toml  THERMO_LICENSE.txt
crates/input/src/: fasta.rs  isobaric.rs  lib.rs  mgf.rs  mzml.rs  thermo.rs  timstof.rs
crates/input/tests/: bsa_fasta_loads.rs  f13_mgf_loads.rs  fasta_handcrafted.rs  instrument_taxonomy.rs  mgf_handcrafted.rs  test_mgf_loads.rs  thermo_raw.rs  timstof_d_loads.rs  tryp_pig_bov_loads.rs
crates/model-train/: Cargo.toml
crates/model-train/examples/: dump_model.rs  gen_bundled_store.rs  local_yield.rs  train_dump.rs
crates/model-train/src/: accumulate.rs  catalog.rs  counts.rs  estimate.rs  gate.rs  labeled.rs  lib.rs  select.rs
crates/model-train/src/store/: migrate.rs  mod.rs  read.rs  schema.rs  update.rs  write.rs
crates/model-train/tests/: accumulate.rs  bootstrap.rs  estimate.rs  incremental.rs  migration_parity.rs  neutral_loss_glyco.rs  roundtrip.rs  sources.rs  yield_nonregression.rs
crates/msgf-rust/: Cargo.toml
crates/msgf-rust/tests/: cli_smoke.rs  precursor_cal_bit_identical.rs  store_selection_equivalence.rs  train_end_to_end.rs
crates/scoring/: Cargo.toml
crates/scoring/examples/: dump_main_ion.rs  dump_prefix_cache.rs
crates/scoring/src/: intensity_model.rs  lib.rs  param_model.rs  testutil.rs
crates/scoring/src/gf/: generating_function.rs  group.rs  primitive_graph.rs  score_dist.rs
crates/scoring/src/scoring/: fragment_ions.rs  mod.rs  psm_score.rs  rank_scorer.rs  scored_spectrum.rs  strong_score.rs
crates/scoring/tests/: add_prob_dist_chunked_parity.rs  gf_graph_dp.rs  param_loads_all_bundled.rs  primitive_graph_arena_parity.rs  score_psm_pxd001819_parity.rs
crates/search/: Cargo.toml
crates/search/src/: candidate_gen.rs  chimeric_features.rs  coisolation.rs  decoy.rs  distinct_peptide.rs  fragment_index.rs  fragment_posting_index.rs  lib.rs  mass_calibrator.rs  match_engine.rs  precursor_cal.rs  precursor_matching.rs  psm.rs  sa_walk.rs  sage_index.rs  search_index.rs  search_params.rs  shared_fragment.rs  suffix_array.rs
crates/search/tests/: api_smoke.rs  candidate_gen_bsa.rs  candidate_gen_smoke.rs  decoy_parity.rs  end_to_end_search_index.rs  gf_bsa_parity.rs  gf_java_parity.rs  java_fixtures_load.rs  mass_calibrator_integration.rs  match_engine_bsa.rs  match_engine_java_parity.rs  match_engine_smoke.rs  match_engine_specevalue.rs  match_spectra_thread_invariance.rs  peptide_mismatch_diagnostic.rs  precursor_matching.rs  sa_walk_lcp_dedup.rs  sa_walk_met_cleavage.rs  suffix_array_round_trip.rs
crates/search/tests/common/: mod.rs
rust/: Cargo.toml
rust/crates/cli/: Cargo.toml
rust/crates/cli/src/: compare.rs  main.rs
rust/crates/cli/tests/: cli_smoke.rs  integration_tolerance.rs
rust/crates/core/: Cargo.toml
rust/crates/core/src/: lib.rs
rust/crates/diff/: Cargo.toml
rust/crates/diff/src/: lib.rs  main.rs
rust/crates/diff/tests/: integration_schema.rs
rust/crates/engine/: Cargo.toml
rust/crates/engine/src/: aa_set.rs  activation.rs  candidate_gen.rs  compact_fasta.rs  decoy.rs  enzyme.rs  instrument.rs  lib.rs  mass.rs  match_engine.rs  modification.rs  param_model.rs  peptide.rs  precursor_matching.rs  protein.rs  protocol.rs  psm.rs  search_index.rs  search_params.rs  suffix_array.rs  testutil.rs  tolerance.rs
rust/crates/engine/tests/: activation_method_match_java.rs  api_smoke.rs  candidate_gen_bsa.rs  candidate_gen_smoke.rs  chemistry_constants_match_java.rs  common_mod_masses_match_java.rs  compact_fasta_round_trip.rs  decoy_parity.rs  end_to_end_search_index.rs  enzyme_rules_match_java.rs  gf_bsa_parity.rs  gf_graph_dp.rs  gf_java_parity.rs  instrument_type_match_java.rs  java_fixtures_load.rs  match_engine_bsa.rs  match_engine_java_parity.rs  match_engine_smoke.rs  match_engine_specevalue.rs  output_pin_schema_parity.rs  param_loads_all_bundled.rs  peptide_round_trip_corpus.rs  precursor_matching.rs  protocol_match_java.rs  standard_aa_masses_match_java.rs  suffix_array_round_trip.rs
rust/crates/fasta/: Cargo.toml
rust/crates/fasta/src/: lib.rs
rust/crates/gf/: Cargo.toml
rust/crates/gf/src/: lib.rs
rust/crates/input/: Cargo.toml
rust/crates/input/src/: fasta.rs  lib.rs  mgf.rs  mzml.rs
rust/crates/input/tests/: bsa_fasta_loads.rs  f13_mgf_loads.rs  test_mgf_loads.rs  tryp_pig_bov_loads.rs
rust/crates/model/: Cargo.toml
rust/crates/model/src/: aa_set.rs  amino_acid.rs  instrument.rs  lib.rs  spectrum.rs
rust/crates/model/tests/: chemistry_constants_match_java.rs  common_mod_masses_match_java.rs  compact_fasta_round_trip.rs  instrument_type_match_java.rs  peptide_round_trip_corpus.rs  standard_aa_masses_match_java.rs
rust/crates/msgf-cli/: Cargo.toml
rust/crates/msgf-cli/tests/: integration_identical.rs
rust/crates/msgf-rust/: Cargo.toml
rust/crates/msgf-rust/tests/: cli_smoke.rs
rust/crates/output/: Cargo.toml
rust/crates/output/src/: lib.rs  pin.rs  row_context.rs  tsv.rs
rust/crates/output/tests/: output_pin_schema_parity.rs
rust/crates/scoring/: Cargo.toml
rust/crates/scoring/examples/: dump_prefix_cache.rs
rust/crates/scoring/src/: param_model.rs  testutil.rs
rust/crates/scoring/tests/: gf_graph_dp.rs  param_loads_all_bundled.rs  primitive_graph_arena_parity.rs  score_psm_pxd001819_parity.rs
rust/crates/search/: Cargo.toml
rust/crates/search/src/: candidate_gen.rs  decoy.rs  distinct_peptide.rs  lib.rs  match_engine.rs  precursor_matching.rs  psm.rs  sa_walk.rs  search_index.rs  search_params.rs  suffix_array.rs
rust/crates/search/tests/: candidate_gen_bsa.rs  candidate_gen_smoke.rs  decoy_parity.rs  end_to_end_search_index.rs  gf_bsa_parity.rs  (+11 more)
rust/crates/spectra/: Cargo.toml
rust/test-fixtures/: Tryp_Pig_Bov.revCat.fasta
(+544 files in other folders)
