[package]
name = "andes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "andes"
path = "src/bin/andes.rs"

[dependencies]
model = { path = "../model" }
scoring_crate = { path = "../scoring", package = "scoring" }
search = { path = "../search" }
output = { path = "../output" }
input = { path = "../input" }
model-train = { path = "../model-train" }
clap = { workspace = true }
num_cpus = "1.16"
rayon = "1.10"
thiserror = { workspace = true }
arrow = "53"
parquet = "53"

[features]
# Native Thermo .raw input (delegates to the input crate's `thermo` feature).
# Not enabled by default: turn on for release builds (`--features thermo`) on a
# toolchain with rustc >= 1.88; opening a `.raw` then needs the .NET 8 runtime
# at runtime. Default builds stay pure-Rust and read mzML/MGF only.
thermo = ["input/thermo"]
# Native Bruker timsTOF `.d` input (delegates to the input crate's `timstof`
# feature). Not enabled by default: turn on with `--features timstof`. Reading a
# `.d` needs no vendor runtime (pure Rust). Default builds read mzML/MGF only.
timstof = ["input/timstof"]

[dev-dependencies]
tempfile = "3.10"
arrow = "53"
parquet = "53"
