[package]
name = "input"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }
model = { path = "../model" }
quick-xml = { workspace = true }
base64 = { workspace = true }
flate2 = { workspace = true }
byteorder = { workspace = true }
thermorawfilereader = { version = "0.7.0", optional = true }

[features]
# Native Thermo .raw reading via the official RawFileReader (hosted .NET 8
# runtime, FlatBuffers). Optional + off-by-default at the crate level; the
# msgf-rust binary turns it on by default. Builds without the .NET SDK
# (assemblies are vendored); only opening a `.raw` needs the .NET 8 runtime.
thermo = ["dep:thermorawfilereader"]
