[package]
name = "scoring"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
model = { path = "../model" }
rustc-hash = "2"
thiserror = { workspace = true }
byteorder = { workspace = true }

[dev-dependencies]
rustc-hash = "2"
tempfile = "3.10"
input = { path = "../input" }
