[package]
name = "scoring"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
model = { path = "../model" }
rustc-hash = "2"
thiserror = { workspace = true }
byteorder = { workspace = true }
arrow = "53"
parquet = "53"

[dev-dependencies]
tempfile = "3.10"
input = { path = "../input" }
