[package]
name = "cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "msgf-rust"
path = "src/bin/msgf-rust.rs"

[[bin]]
name = "msgf-diff"
path = "src/bin/msgf-diff.rs"

[lib]
name = "msgf_diff"
path = "src/lib.rs"

[dependencies]
engine = { path = "../engine" }
clap = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
