[package]
name = "msgf-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "msgf-rust"
path = "src/bin/msgf-rust.rs"

[[bin]]
name = "msgf-diff"
path = "src/bin/msgf-diff.rs"

[lib]
name = "msgf_cli"
path = "src/lib.rs"

[dependencies]
model = { path = "../model" }
scoring_crate = { path = "../scoring", package = "scoring" }
search = { path = "../search" }
output = { path = "../output" }
input = { path = "../input" }
clap = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
