[package]
name = "msgf-rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "msgf-rust"
path = "src/bin/msgf-rust.rs"

[dependencies]
model = { path = "../model" }
scoring_crate = { path = "../scoring", package = "scoring" }
search = { path = "../search" }
output = { path = "../output" }
input = { path = "../input" }
clap = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
