[package]
name = "output"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
model = { path = "../model" }
scoring_crate = { path = "../scoring", package = "scoring" }
search = { path = "../search" }
thiserror = { workspace = true }
