[package]
name = "search"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
model = { path = "../model" }
rayon = "1.10"
scoring_crate = { path = "../scoring", package = "scoring" }
suffix = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
input = { path = "../input" }
